--- a/maximal-rights/index.html
+++ b/maximal-rights/index.html
@@ -84,8 +84,19 @@
 
 </div>
 
-<p><a target="_blank" href="/assets/maximalrights.pdf">Read PDF version</a></p>
-
+ 
+                <p>
+                    <div class="book-pdf">
+                      <a href="/assets/maximalrights.pdf" target="_blank">
+                        <span>
+                          Read PDF version
+                          <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 24 24">
+                            <path d="M6 2h9l5 5v15a1 1 0 0 1-1 1H6a1 1 0 0 1-1-1V3c0-.55.45-1 1-1zm8 1.5V8h4.5L14 3.5zM8 13h8v-2H8v2zm0 4h8v-2H8v2z"/>
+                          </svg>
+                        </span>
+                      </a>
+                    </div>
+                </p>
 <h3 id='introduction'>Introduction</h3>
 
 <p>What rights persons have is a much debated issue in moral and political philosophy. Many schools of thought believe that persons do enjoy certain rights, although there might be disagreement about what these rights are. Despite their differences and caveats, many authors of a liberal or libertarian background have two principles in common in essence: that more rights is preferred to less, and that every person ought to enjoy equal rights. Therefore, it is natural to view that persons ought to enjoy the most extensive system of rights that is logically possible, and compatible with all other persons enjoying the same system of rights. This view is not new. In his <i>A Theory of Justice</i>, John Rawls incorporated this idea into his first principle of justice:</p>
@@ -378,6 +389,7 @@ and
 <p><bib-author>J. Waldron</bib-author>, <i>The Right to Private Property</i> (Clarendon Press, 1990).</p>
 
 <p><bib-author>M. Zorn</bib-author>, “A remark on method in transfinite algebra” (<i>Bulletin of the American Mathematical Society</i>, 1935).</p>
+                
 
             </section>
         </main>
