--- a/books/index.html
+++ b/books/index.html
@@ -78,6 +78,17 @@
                   </a>
                 </div>
                 
+              <div class="book-amazon">
+                <a href="https://www.amazon.com/dp/B0FWY9YW1V" target="_blank" rel="noopener">
+                  <span>
+                    Buy on Amazon
+                    <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" viewBox="0 0 24 24" aria-hidden="true">
+                      <path d="M7 18a2 2 0 1 0 0 4 2 2 0 0 0 0-4zm10 0a2 2 0 1 0 .001 4.001A2 2 0 0 0 17 18zM6.2 5l.3 2H20a1 1 0 0 1 .98 1.197l-1.5 7A1 1 0 0 1 18.5 16H8a1 1 0 0 1-.98-.804L5.22 4H3a1 1 0 1 1 0-2h3a1 1 0 0 1 .98.804L7 5h-.8zM9 14.5h8.9l1.1-5.5H6.7l.7 3.5H17a1 1 0 1 1 0 2H9z"/>
+                    </svg>
+                  </span>
+                </a>
+              </div>
+                
                 <div class="book-item">
                     <div class="book-cover">
                         <img src="/assets/marx_in_the_age_of_ai.png" alt="Marx in the Age of AI" />
