essay: categorical imperative voting

--- a/essays/index.html
+++ b/essays/index.html
@@ -66,6 +66,13 @@
                 
                 <h2 id="page-title">Essays</h2>
                 <div class="essay-item">
+                    <div class="essay-date">22 Oct 2025</div>
+                    <div class="essay-title">
+                        <a href="/categorical-imperative-voting/">Categorical imperative of voting </a>
+                    </div>
+                </div>
+            
+                <div class="essay-item">
                     <div class="essay-date">28 Jun 2025</div>
                     <div class="essay-title">
                         <a href="/safeguarding-memories/">Safeguarding memories</a>
